k8s_templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: <name>
  namespace: <namespace>
  labels:
    k8s-app: <name>
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: <name>.<env>.<dnsbasename>
      http:
        paths:
          - path: /
            backend:
              serviceName: <name>
              servicePort: http
