k8s_templates/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: <name>
  namespace: <namespace>
spec:
  podSelector:
    matchLabels:
      k8s-app: <name>
  ingress:
    # Prometheus traffic ingress for custom
    # metrics monitoring
    - ports:
        - port: http
      from:
        # Allow access from Prometheus
        - podSelector:
            matchLabels:
              prometheus: k8s
          namespaceSelector:
            matchLabels:
              role: monitoring
    - ports:
        - port: http
      from:
        # Allow access from Traefik
        - podSelector:
            matchLabels:
              k8s-app: traefik-ingress-controller
          namespaceSelector:
            matchLabels:
              role: ingress
